--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -14,4 +14,4 @@ jobs:
         with:
           go-version: '1.20'
       - name: Force Failure
-        run: go version
+        run: go test ./..
